# chat

./: cabal.project  chat.cabal  chat.txt  note.txt
app/: Client.hs  Config.hs  Server.hs  Types.hs
