cabal-version:      2.4
name:               chat
version:            0.1.0.0
author:             jrvieira
maintainer:         github@jrvieira.com
extra-source-files: CHANGELOG.md

executable server
    ghc-options: -O2 -threaded -rtsopts -Wall -Wpartial-fields
    main-is:          Server.hs
    other-modules: Config
      , Types
    build-depends:    base ^>=4.17.2.0
      , ansi-terminal
      , containers
      , websockets >= 0.12.7 && < 0.13
      , async
      , stm
      , text
      , text-show
      , time
      , aeson
      , ListLike
      , zero
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions: OverloadedStrings
      , OverloadedLists
      , ExtendedDefaultRules

executable client
    main-is:          Client.hs
    ghc-options: -w -O2 -threaded -with-rtsopts=-N
    build-depends:    base
      , websockets >= 0.12.7 && < 0.13
      , network
      , async
      , text
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions: OverloadedStrings
      , OverloadedLists
      , ExtendedDefaultRules
