cabal-version:      2.4
name:               chat
version:            0.1.0.0
author:             jrvieira
maintainer:         github@jrvieira.com
extra-source-files: CHANGELOG.md

executable server
    main-is: Server.hs
    ghc-options: -O2 -threaded -rtsopts -Wall -Wpartial-fields
    other-modules: Config
      , Types
    build-depends: base
      , ansi-terminal
      , containers
      , websockets >= 0.12.7 && < 0.13
      , async
      , stm
      , text
      , text-show
      , time
      , aeson
      , ListLike
      , zero
    hs-source-dirs: app
    default-language: Haskell2010
    default-extensions: ImportQualifiedPost
      , ScopedTypeVariables
      , OverloadedStrings
      , OverloadedLists
      , ExtendedDefaultRules
      , FlexibleInstances
      , DeriveFunctor
      , DeriveGeneric

executable client
    main-is: Client.hs
    ghc-options: -w -O2 -threaded -with-rtsopts=-N
    other-modules: Types
    build-depends: base
      , websockets >= 0.12.7 && < 0.13
      , network
      , async
      , text
      , wuss
      , readline
      , ansi-terminal
      , aeson
      , containers
      , text-show
      , time
      , stm
      , zero
    hs-source-dirs: app
    default-language: Haskell2010
    default-extensions: ImportQualifiedPost
      , ScopedTypeVariables
      , OverloadedStrings
      , OverloadedLists
      , ExtendedDefaultRules
      , FlexibleInstances
      , DeriveFunctor
      , DeriveGeneric
